fixed header cutoff when window is x-large but slightly smaller than maximized

--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -168,7 +168,7 @@ body.video cite { color: #fff; }
 @media #{$xlarge-up} {
     #logo img {
         margin-top: 0px;
-        margin-left: -350px;
+        margin-left: -250px;
     }
     #masthead {
         height: 450px;
